--- a/Proyecto compu/Papel, cartón y vidrio.html
+++ b/Proyecto compu/Papel, cartón y vidrio.html
@@ -52,6 +52,7 @@
 			</article>
 		</section>
 		<Aside>
+            <h2>hola</h2>
 		</Aside>
 		<footer>
 			Realizado en: Marzo 2022 Grupo11  <br>
