Update Briks o tetra bricks y latas.html
test import

--- a/Proyecto compu/Briks o tetra bricks y latas.html
+++ b/Proyecto compu/Briks o tetra bricks y latas.html
@@ -61,8 +61,27 @@
                     se compactan para ser fundidas a 700°C, con las cuales se pueden crear más latas y objetos metálicos. El material nunca pierde calidad, por lo cual las latas pueden ser recicladas infinitamente.</p>
                     <h5>Residuos profesional. (15 de mayo de 2020). RECICLAJE DE LATAS, UN MODELO DE ECONOMÍA CIRCULAR. residuosprofesional.com. Recuperado de: 
                     <a target="_blank" href="https://www.residuosprofesional.com/reciclaje-de-latas-economia-circular/">https://www.residuosprofesional.com/reciclaje-de-latas-economia-circular/</a></h5>
+
+			</article>
 			
-            </article>
+			<article>
+				<h2>Tabla comparativa</h2>
+				
+				<table Border=1>
+					<tr bgcolor="Gray">
+						<th>Propiedad</th>
+						<th>Tetra briks</th>
+						<th>Latas</th>
+					</tr>
+					
+					<tr>
+						<th bgcolor="Gray">a</th>
+						<th bgcolor="White">si</th>
+						<th bgcolor="White">no</th>
+					</tr>
+				</table>
+			</article>
+			
 		</section>
 		<Aside>
 		</Aside>
