Update Briks o tetra bricks y latas.html
test img tbl 2

--- a/Proyecto compu/Briks o tetra bricks y latas.html
+++ b/Proyecto compu/Briks o tetra bricks y latas.html
@@ -76,8 +76,8 @@
 					
 					<tr bgcolor="Gray">
 						<th></th>
-						<th><iframe width="278" height="92" src="https://github.com/albo437/Proyecto-Compu/blob/main/Proyecto%20compu/tetrabrik.png?raw=true"></iframe></th>
-						<th><iframe width="278" height="278" src="https://github.com/albo437/Proyecto-Compu/blob/main/Proyecto%20compu/lata.png?raw=true"></iframe></th>
+						<th><iframe width="278" height="92" src="https://raw.githubusercontent.com/albo437/Proyecto-Compu/main/Proyecto%20compu/tetrabrik.png"></iframe></th>
+						<th><iframe width="278" height="278" src="https://raw.githubusercontent.com/albo437/Proyecto-Compu/main/Proyecto%20compu/lata.png"></iframe></th>
 					</tr>
 					
 					<tr>
