--- a/Proyecto compu/Briks o tetra bricks y latas.html
+++ b/Proyecto compu/Briks o tetra bricks y latas.html
@@ -76,8 +76,8 @@
 					
 					<tr bgcolor="Gray">
 						<th></th>
-						<th><iframe width="278" height="92" src="https://raw.githubusercontent.com/albo437/Proyecto-Compu/main/Proyecto%20compu/tetrabrik.png"></iframe></th>
-						<th><iframe width="278" height="278" src="https://raw.githubusercontent.com/albo437/Proyecto-Compu/main/Proyecto%20compu/lata.png"></iframe></th>
+						<th><iframe width="278" height="92" src="https://www.elempaque.com/documenta/imagenes/124238/tetrabrik-carton-aseptico-nuevo-tetra-pak-g.jpg"></iframe></th>
+						<th><iframe width="278" height="278" src="https://thumbs.dreamstime.com/b/lata-de-la-comida-en-el-fondo-blanco-36409678.jpg"></iframe></th>
 					</tr>
 					
 					<tr>
