Update Briks o tetra bricks y latas.html

--- a/Proyecto compu/Briks o tetra bricks y latas.html
+++ b/Proyecto compu/Briks o tetra bricks y latas.html
@@ -76,8 +76,8 @@
 					
 					<tr bgcolor="Gray">
 						<th></th>
-						<th><img style="height: 300px;;width:300px" src="https://www.elempaque.com/documenta/imagenes/124238/tetrabrik-carton-aseptico-nuevo-tetra-pak-g.jpg"></img></th>
-						<th><img style="height: 300px;;width:300px" src="https://thumbs.dreamstime.com/b/lata-de-la-comida-en-el-fondo-blanco-36409678.jpg"></img></th>
+						<th><img style="height: 300px; width:300px" src="https://www.elempaque.com/documenta/imagenes/124238/tetrabrik-carton-aseptico-nuevo-tetra-pak-g.jpg"></img></th>
+						<th><img style="height: 300px; width:300px" src="https://thumbs.dreamstime.com/b/lata-de-la-comida-en-el-fondo-blanco-36409678.jpg"></img></th>
 					</tr>
 					
 					<tr>
