--- a/Proyecto compu/Briks o tetra bricks y latas.html
+++ b/Proyecto compu/Briks o tetra bricks y latas.html
@@ -123,6 +123,11 @@
 					</tr>
 					
 				</table>
+				<br>
+				<h2>Video informativo</h2>
+				<iframe width="560" height="315" src="https://www.youtube.com/embed/No7Jyhdxn5Y" title="YouTube video player" frameborder="0" 
+				allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+			</article>
 			</article>
 			
 		</section>
