--- a/Proyecto compu/Index.html
+++ b/Proyecto compu/Index.html
@@ -2,23 +2,9 @@
     <head>
         <meta charset="utf-8">
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans">
+	    	<link rel="stylesheet" type="css" href="General-style.css">
         <title>Inicio</title>
     </head>
-    <style>
-        .justify {
-            text-align: justify;
-        }
-        .center {
-            text-align: center;
-        }
-        p {
-            font-size: 16px;
-            font-family: "open sans", sans-serif;
-        }
-        body {
-            padding: 2% 5% 2% 5%;
-            background-color: azure;
-        }
     </style>
     <body>
 		<header><h1 class="center">Si te ayudo ¿Cambias?</h1></header>
