Update Envases de plástico (PET) y pilas y baterías.html

--- a/Proyecto compu/Envases de plástico (PET) y pilas y baterías.html
+++ b/Proyecto compu/Envases de plástico (PET) y pilas y baterías.html
@@ -2,25 +2,9 @@
     <head>
         <meta charset="utf-8">
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans">
+	    	<link rel="stylesheet" type="css" href="General-style.css">
         <title>Envases de plástico (PET) y pilas y baterías</title>
     </head>
-
-    <style>
-        .justify {
-            text-align: justify;
-        }
-        .center {
-            text-align: center;
-        }
-        p {
-            font-size: 16px;
-            font-family: "open sans", sans-serif;
-        }
-        body {
-            padding: 2% 5% 2% 5%;
-            background-color: azure;
-        }
-    </style>
 
     <body>
 		<header><h1 class="center">Envases de plástico (PET) y pilas y baterías</h1></header>
