--- a/Proyecto compu/Papel, cartón y vidrio.html
+++ b/Proyecto compu/Papel, cartón y vidrio.html
@@ -2,26 +2,10 @@
     <head>
         <meta charset="utf-8">
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans">
+	    	<link rel="stylesheet" type="css" href="General-style.css">
         <title>Papel, cartón y vidrio</title>
     </head>
 
-    <style>
-        .justify {
-            text-align: justify;
-        }
-        .center {
-            text-align: center;
-        }
-        p {
-            font-size: 16px;
-            font-family: "open sans", sans-serif;
-        }
-        body {
-            padding: 2% 5% 2% 5%;
-            background-color: azure;
-        }
-    </style>
-    
     <body>
 		<header><h1 class="center">Papel, cartón y vidrio</h1></header>
 		<nav>
