--- a/Proyecto compu/Papel, cartón y vidrio.html
+++ b/Proyecto compu/Papel, cartón y vidrio.html
@@ -1,8 +1,8 @@
 <html lang="es">
     <head>
         <meta charset="utf-8">
-		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans">
-	    	<link rel="stylesheet" type="css" href="General-style.css">
+		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans"/>
+	    	<link rel="stylesheet" href="General-style.css"/>
         <title>Papel, cartón y vidrio</title>
     </head>
 
