--- a/Proyecto compu/Briks o tetra bricks y latas.html
+++ b/Proyecto compu/Briks o tetra bricks y latas.html
@@ -6,7 +6,7 @@
         <title>Briks o tetra bricks y latas</title>
     </head>
     <body>
-		<header><h1 class="center">Briks o tetra bricks y latas</h1></header>
+		<header><h1>Briks o tetra bricks y latas</h1></header>
 		<nav>
             <p>
                 <a href="Index.html" >Inicio</a><br>
@@ -20,7 +20,7 @@
 				
                 <H2>Reciclaje de tetra briks:</H2>
 
-                    <p class="justify">Los tetra briks tienen muchísima presencia en el ámbito familiar, pues tienen ventajas de seguridad, facilidad de transporte, y encima beneficios ecológicos, dentro de lo cual se incluye su reciclaje.
+                    <p>Los tetra briks tienen muchísima presencia en el ámbito familiar, pues tienen ventajas de seguridad, facilidad de transporte, y encima beneficios ecológicos, dentro de lo cual se incluye su reciclaje.
                     Principalmente, los tetra briks están fabricados con materia prima renovable, y, por ende, su proceso de producción en cantidades masivas, debido a su grande popularidad. Además, ocupan poco espacio
                     siendo plegados en bolsas de basura y en contenedores de reciclaje, reduciendo el espacio que ocupan en ambos contenedores. Aunque estos sean perfectamente reciclables,
                     estos requieren de ser depositados en contenedores amarillos de reciclaje, puesto que tardan alrededor de 35 años en degradarse.<br><br>
@@ -34,7 +34,7 @@
                 
                 <h2>Reciclaje de latas:</h2>
 
-                    <p class="justify">El diseño de latas ha cambiado durante los 85 años que ha existido, principalmente, hacia bien, pues su peso ha disminuido en un 30%, y se ha perfeccionado su transporte y 
+                    <p>El diseño de latas ha cambiado durante los 85 años que ha existido, principalmente, hacia bien, pues su peso ha disminuido en un 30%, y se ha perfeccionado su transporte y 
                     almacenamiento, reduciendo su contaminación a causa de ello, como su huella de carbono, que se ha reducido en un 31%.
                     Cada lata se puede reciclar completamente, aunque, como se dijo antes con los tetra briks, estos envases se deben depositar en sus respectivos contenedores amarillos para 
                     que efectivamente se puedan reciclar.
