--- a/Proyecto compu/Envases de plástico (PET) y pilas y baterías.html
+++ b/Proyecto compu/Envases de plástico (PET) y pilas y baterías.html
@@ -7,7 +7,7 @@
     </head>
 
     <body>
-		<header><h1 class="center">Envases de plástico (PET) y pilas y baterías</h1></header>
+		<header><h1>Envases de plástico (PET) y pilas y baterías</h1></header>
 		<nav>
             <p>
                 <a href="Index.html" >Inicio</a><br>
@@ -19,7 +19,7 @@
 		<section> 
 			<article>
                <h2>Envases de plástico (PET)</h2>
-               <p class="justify">
+               <p>
                 El consumo de envases plásticos es cada vez mayor y aún así no se es consciente de los daños que pueden ocurrir a largo plazo si su uso no es moderado. 
                 El plástico tarda cientos de años en degradarse y su contaminación ha causado bastante daños en el océano y hasta puede llegar a nuestros alimentos, 
                 ya que es transportado por todo el planeta. Este material también contiene aditivos y absorbe metales pesados, antibióticos, pesticidas y demás toxicidad que puede afectar al 
@@ -32,7 +32,7 @@
                 Es muy importante cuidar del medio ambiente, por lo que, se necesita atender urgentemente este tema que nos corresponde a todos por nuestro futuro y el de los otros, 
                 de manera que llevemos a cabo estos proyectos con mayor interés y de forma estricta, evitando el uso de plásticos, separándolos y no desecharlos a los océanos.</p>
                 <h2>Las pilas y baterías</h2>
-                <p class="justify">
+                <p>
                 Las pilas y baterías son elementos que contienen sustancias tóxicas que a lo largo de los años se acumulan y afectan a las plantas y animales, e incluso a nosotros mismos. 
                 Mientras más aumente su consumo y desecho más crecerá la contaminación, principalmente en los vertederos o acuíferos en dónde la mayoría de las veces se desechan. 
                 Es por eso que existe una técnica de hidrometalúrgica y otras más, que consiste en un proceso de descomponer y triturar estos tipos de metales, dando la fracción de polvos 
