--- a/Proyecto compu/Index.html
+++ b/Proyecto compu/Index.html
@@ -7,7 +7,7 @@
     </head>
     </style>
     <body>
-		<header><h1 class="center">Si te ayudo ¿Cambias?</h1></header>
+		<header><h1>Si te ayudo ¿Cambias?</h1></header>
 		<nav>
             <p>
             <a href="Index.html">Inicio</a><br>
