--- a/Proyecto compu/Briks o tetra bricks y latas.html
+++ b/Proyecto compu/Briks o tetra bricks y latas.html
@@ -116,7 +116,7 @@
 		<Aside>
 		</Aside>
 	    
-		<footer style="background-color: #7577A0;">
+		<footer>
 			<br>Realizado en: Marzo 2022 Grupo11  <br>
 			Copyright &copy; 2022
 		</footer>
