Update Envases de plástico (PET) y pilas y baterías.html

--- a/Proyecto compu/Envases de plástico (PET) y pilas y baterías.html
+++ b/Proyecto compu/Envases de plástico (PET) y pilas y baterías.html
@@ -43,6 +43,9 @@
                 los encargados de centros de acopio que reciben estos desechos para procesarlos de la forma más adecuada. Por esta razón, no se deben desechar en los botes de basura, ya que de 
                 esta manera cuidaremos nuestra salud y evitaremos una contaminación más grande en un futuro.</p>
 			</article>
+		        </article>
+	    	[![Bater-as.webp](https://i.postimg.cc/BnVSYCJX/Bater-as.webp)](https://postimg.cc/sM5C17Qr)
+	    	        </article>
 		</section>
 		<Aside>
 		</Aside>
