Update Envases de plástico (PET) y pilas y baterías.html

--- a/Proyecto compu/Envases de plástico (PET) y pilas y baterías.html
+++ b/Proyecto compu/Envases de plástico (PET) y pilas y baterías.html
@@ -31,7 +31,8 @@
                 original, combustible y muchos otros usos.<br><br>
                 Es muy importante cuidar del medio ambiente, por lo que, se necesita atender urgentemente este tema que nos corresponde a todos por nuestro futuro y el de los otros, 
                 de manera que llevemos a cabo estos proyectos con mayor interés y de forma estricta, evitando el uso de plásticos, separándolos y no desecharlos a los océanos.</p>
-                <h2>Las pilas y baterías</h2>
+                [![banner-5-2.jpg](https://i.postimg.cc/Sxv9685G/banner-5-2.jpg)](https://postimg.cc/LJjhRqmq)
+		<h2>Las pilas y baterías</h2>
                 <p>
                 Las pilas y baterías son elementos que contienen sustancias tóxicas que a lo largo de los años se acumulan y afectan a las plantas y animales, e incluso a nosotros mismos. 
                 Mientras más aumente su consumo y desecho más crecerá la contaminación, principalmente en los vertederos o acuíferos en dónde la mayoría de las veces se desechan. 
