--- a/Proyecto compu/Papel, cartón y vidrio.html
+++ b/Proyecto compu/Papel, cartón y vidrio.html
@@ -46,6 +46,17 @@
                    <p>El reciclaje de vidrio es el proceso mediante el cual se convierten desechos de vidrio en materiales que servirán para la creación de nuevos productos. 
                    Este material se puede volver a reutilizar mediante un proceso de lavado de desechos o a través de su fundición y puede ser reciclado al 100% una cantidad 
                    indefinida de veces. Para ello debemos separarlos del resto de materiales. Al contenedor verde.</p>
+		
+		<table Border=0>
+					
+			<tr bgcolor="azure">
+				<th><img style="width: 180px; height: 240px;" src="https://cdn.pixabay.com/photo/2016/03/31/18/52/bottle-1294706_1280.png"></img></th>
+				<th><img style="width: 185px; height: 138px;" src="https://assets.stickpng.com/images/580b57fcd9996e24bc43c1f1.png"></img></th>
+	    			<th><img style="width: 185px; height: 149px;" src="https://sc04.alicdn.com/kf/Hf202f957a6a7469a8e20025aee21d199B.png"></img></th>
+			</tr>
+					
+		</table>		
+		
 			</article>
 		</section>
 		<Aside>
