--- a/Proyecto compu/Papel, cartón y vidrio.html
+++ b/Proyecto compu/Papel, cartón y vidrio.html
@@ -52,7 +52,7 @@
 			<tr bgcolor="azure">
 				<th><img style="width: 130px; height: 260px;" src="https://cdn.pixabay.com/photo/2016/03/31/18/52/bottle-1294706_1280.png"></img></th>
 				<th><img style="width: 88px; height: 260px;" src="https://assets.stickpng.com/images/580b57fcd9996e24bc43c1f1.png"></img></th>
-	    			<th><img style="width: 185px; height: 180px;" src="https://sc04.alicdn.com/kf/Hf202f957a6a7469a8e20025aee21d199B.png"></img></th>
+	    			<th><img style="width: 66px; height: 136px;" src="https://e6.pngbyte.com/pngpicture/88200/png-glass-bottle-png-Perfume-Roller-Bottle_thumbnail.png"></img></th>
 			</tr>
 					
 		</table>		
