--- a/Proyecto compu/Papel, cartón y vidrio.html
+++ b/Proyecto compu/Papel, cartón y vidrio.html
@@ -48,13 +48,13 @@
                    Este material se puede volver a reutilizar mediante un proceso de lavado de desechos o a través de su fundición y puede ser reciclado al 100% una cantidad 
                    indefinida de veces. Para ello debemos separarlos del resto de materiales. Al contenedor verde.</p>
 		<div class="container">
-				<img src="https://cdn.pixabay.com/photo/2016/03/31/18/52/bottle-1294706_1280.png"  />
+				<img src="https://cdn.pixabay.com/photo/2016/03/31/18/52/bottle-1294706_1280.png" style="width: 130px; height: 260px;" />
 			</div>
 			<div class="container">
-				<img class="middle-img" src="https://assets.stickpng.com/images/580b57fcd9996e24bc43c1f1.png"   style="position:relative; left:150%;"/>
+				<img class="middle-img" src="https://assets.stickpng.com/images/580b57fcd9996e24bc43c1f1.png"   style="width: 88px; height: 260px; position:relative; left:150%;"/>
 			</div>
 			<div class="container">
-				<img src="https://e6.pngbyte.com/pngpicture/88200/png-glass-bottle-png-Perfume-Roller-Bottle_thumbnail.png"  style="position:relative; left:325%;"/>
+				<img src="https://e6.pngbyte.com/pngpicture/88200/png-glass-bottle-png-Perfume-Roller-Bottle_thumbnail.png"  style="width: 100px; height: 204px; position:relative; left:325%;"/>
 		</div>		
 
 		<h2>Tabla comparativa</h2>
