--- a/Proyecto compu/Index.html
+++ b/Proyecto compu/Index.html
@@ -26,6 +26,22 @@
 
 			</article>
 		</section>
+	    
+	    	<section> 
+			<article>
+				<h2>¿Tienes algún comentario?</h2>
+               			<h3>
+				<form>
+					<label for="nom">Nombre:</label>
+					<input type="text" id=nom name="Nombre" placeholder="Escribe tu nombre"></input><br>
+					<label for="mail">Correo electrónico:</label>
+					<input type="mail" id=mail name="Correo" placeholder="Escribe tu correo"></input><br>
+					<label for="tel">Teléfono:</label>
+					<textarea id=msg name="Mensaje" placeholder="Escribe tu comentario aquí"></textarea><br>
+				</form>		
+              			</h3>
+			</article>
+		</section>
 		<Aside>
 		</Aside>
 		<footer>
