--- a/Proyecto compu/Index.html
+++ b/Proyecto compu/Index.html
@@ -36,6 +36,7 @@
 					<input type="text" id=nom name="Nombre" placeholder="Escribe tu nombre"></input><br>
 					<label for="mail">Correo electrónico:</label>
 					<input type="mail" id=mail name="Correo" placeholder="Escribe tu correo"></input><br>
+					<label for="text">Comentario:</label>
 					<textarea id=msg name="Mensaje" placeholder="Escribe tu comentario aquí"></textarea><br>
 				</form>		
               			</h3>
