--- a/Proyecto compu/Index.html
+++ b/Proyecto compu/Index.html
@@ -19,15 +19,16 @@
 		<section> 
 			<article>
 				<h2>Integrantes:</h2>
-                <h3>Isabella Alvarado<br>
-                Alvaro Bolaños<br>
-                Max Castillo<br>
-                Derick Zambrano</h3>
-
+				<h3>Isabella Alvarado<br>
+				Alvaro Bolaños<br>
+				Max Castillo<br>
+				Derick Zambrano</h3>
 			</article>
-		</section>
-	    
-	    	<section> 
+
+			<article>
+				<img src="http://www.imagenesanimadas.net/Ciencias/Reciclaje/Imagen-animada-Reciclaje-11.gif">
+			</article>
+
 			<article>
 				<h2>¿Tienes algún comentario?</h2>
                			<h3>
@@ -41,7 +42,10 @@
 				</form>		
               			</h3>
 			</article>
+
 		</section>
+	    
+
 		<Aside>
 		</Aside>
 		<footer>
