--- a/Proyecto compu/Index.html
+++ b/Proyecto compu/Index.html
@@ -26,7 +26,7 @@
 			</article>
 
 			<article>
-				<marquee><img src="http://www.imagenesanimadas.net/Ciencias/Reciclaje/Imagen-animada-Reciclaje-11.gif"></img></marquee>
+				<marquee><img src="https://www.ifema.es/img/xl/reciclaje/recycling-305569_1280.png"></img></marquee>
 			</article>
 
 			<article>
