--- a/Proyecto compu/Index.html
+++ b/Proyecto compu/Index.html
@@ -26,7 +26,7 @@
 			</article>
 
 			<article>
-				<marquee><img src="http://www.imagenesanimadas.net/Ciencias/Reciclaje/Imagen-animada-Reciclaje-11.gif"></img></marquee>
+				<marquee><img src="http://www.imagenesanimadas.net/Ciencias/Reciclaje/Imagen-animada-Reciclaje-11.gif" width=111 height= 156></img></marquee>
 			</article>
 
 			<article>
