Update Briks o tetra bricks y latas.html

--- a/Proyecto compu/Briks o tetra bricks y latas.html
+++ b/Proyecto compu/Briks o tetra bricks y latas.html
@@ -6,18 +6,17 @@
         <title>Briks o tetra bricks y latas</title>
     </head>
     <body>
-		<header><h1>Briks o tetra bricks y latas</h1></header>
 		<nav>
-            <p>
-                <a href="Index.html" >Inicio</a><br>
-                <a href="Briks o tetra bricks y latas.html" >Briks o tetra bricks y latas</a><br> 
-                <a href="Papel, cartón y vidrio.html" >Papel, cartón y vidrio</a><br>
-                <a href="Envases de plástico (PET) y pilas y baterías.html" >Envases de plástico (PET) y pilas y baterías</a><br>
-            </p>   
+            <div class="topnav">
+                <a href="Index.html">Inicio</a>
+                <a href="Briks o tetra bricks y latas.html">Briks o tetra bricks y latas</a>
+                <a href="Papel, cartón y vidrio.html" >Papel, cartón y vidrio</a>
+                <a href="Envases de plástico (PET) y pilas y baterías.html">Envases de plástico (PET) y pilas y baterías</a>
+            </div>
         </nav>
 		<section> 
 			<article>
-				
+				<header>Briks o tetra bricks y latas</header><br>
                 <H2>Reciclaje de tetra briks:</H2>
 
                     <p>Los tetra briks tienen muchísima presencia en el ámbito familiar, pues tienen ventajas de seguridad, facilidad de transporte, y encima beneficios ecológicos, dentro de lo cual se incluye su reciclaje.
