--- a/Proyecto compu/Index.html
+++ b/Proyecto compu/Index.html
@@ -26,7 +26,7 @@
 			</article>
 
 			<article>
-				<marquee><img src="http://www.imagenesanimadas.net/Ciencias/Reciclaje/Imagen-animada-Reciclaje-11.gif" width="100" height="97"</img></marquee>
+				<marquee><img style="display: block;-webkit-user-select: none;margin: auto;background-color: hsl(0, 0%, 90%);transition: background-color 300ms;" src="http://www.imagenesanimadas.net/Ciencias/Reciclaje/Imagen-animada-Reciclaje-11.gif"></marquee>
 			</article>
 
 			<article>
