--- a/Proyecto compu/Index.html
+++ b/Proyecto compu/Index.html
@@ -7,45 +7,26 @@
     </head>
     </style>
     <body>
-		<header><h1>Si te ayudo ¿Cambias?</h1></header>
-		<nav>
-            <p>
-            <a href="Index.html">Inicio</a><br>
-            <a href="Briks o tetra bricks y latas.html" >Briks o tetra bricks y latas</a><br> 
-            <a href="Papel, cartón y vidrio.html" >Papel, cartón y vidrio</a><br>
-            <a href="Envases de plástico (PET) y pilas y baterías.html" >Envases de plástico (PET) y pilas y baterías</a><br>
-            </p>
+        <nav>
+            <div class="topnav">
+                <a href="Index.html">Inicio</a>
+                <a href="Briks o tetra bricks y latas.html">Briks o tetra bricks y latas</a>
+                <a href="Papel, cartón y vidrio.html" >Papel, cartón y vidrio</a>
+                <a href="Envases de plástico (PET) y pilas y baterías.html">Envases de plástico (PET) y pilas y baterías</a>
+            </div>
         </nav>
+        <br>
 		<section> 
 			<article>
+                <header>Si te ayudo ¿Cambias?</header><br>
 				<h2>Integrantes:</h2>
-				<h3>Isabella Alvarado<br>
-				Alvaro Bolaños<br>
-				Max Castillo<br>
-				Derick Zambrano</h3>
-			</article>
+                <h3>Isabella Alvarado<br>
+                Alvaro Bolaños<br>
+                Max Castillo<br>
+                Derick Zambrano</h3>
 
-			<article>
-				<marquee><img style="display: block;-webkit-user-select: none;margin: auto;background-color: hsl(0, 0%, 90%);transition: background-color 300ms;" src="http://www.imagenesanimadas.net/Ciencias/Reciclaje/Imagen-animada-Reciclaje-11.gif"></marquee>
 			</article>
-
-			<article>
-				<h2>¿Tienes algún comentario?</h2>
-               			<h3>
-				<form>
-					<label for="nom">Nombre:</label>
-					<input type="text" id=nom name="Nombre" placeholder="Escribe tu nombre"></input><br>
-					<label for="mail">Correo electrónico:</label>
-					<input type="mail" id=mail name="Correo" placeholder="Escribe tu correo"></input><br>
-					<label for="text">Comentario:</label>
-					<textarea id=msg name="Mensaje" placeholder="Escribe tu comentario aquí"></textarea><br>
-				</form>		
-              			</h3>
-			</article>
-
 		</section>
-	    
-
 		<Aside>
 		</Aside>
 		<footer>
