Update Envases de plástico (PET) y pilas y baterías.html

--- a/Proyecto compu/Envases de plástico (PET) y pilas y baterías.html
+++ b/Proyecto compu/Envases de plástico (PET) y pilas y baterías.html
@@ -7,17 +7,17 @@
     </head>
 
     <body>
-		<header><h1>Envases de plástico (PET) y pilas y baterías</h1></header>
-		<nav>
-            <p>
-                <a href="Index.html" >Inicio</a><br>
-                <a href="Briks o tetra bricks y latas.html" >Briks o tetra bricks y latas</a><br> 
-                <a href="Papel, cartón y vidrio.html" >Papel, cartón y vidrio</a><br>
-                <a href="Envases de plástico (PET) y pilas y baterías.html" >Envases de plástico (PET) y pilas y baterías</a><br>
-            </p>   
+	    <nav>
+            <div class="topnav">
+            	<a href="Index.html">Inicio</a>	
+            	<a href="Briks o tetra bricks y latas.html">Briks o tetra bricks y latas</a>	
+            	<a href="Papel, cartón y vidrio.html">Papel, cartón y vidrio</a>	
+            	<a href="Envases de plástico (PET) y pilas y baterías.html">Envases de plástico (PET) y pilas y baterías</a>	
+            </div>
         </nav>
 		<section> 
 			<article>
+				<header>Envases de plástico (PET) y pilas y baterías</header>
                <h2>Envases de plástico (PET)</h2>
                <p>
                 El consumo de envases plásticos es cada vez mayor y aún así no se es consciente de los daños que pueden ocurrir a largo plazo si su uso no es moderado. 
