--- a/Proyecto compu/Index.html
+++ b/Proyecto compu/Index.html
@@ -24,7 +24,25 @@
                 Alvaro Bolaños<br>
                 Max Castillo<br>
                 Derick Zambrano</h3>
+			</article>
+			</article>
 
+			<article>
+				<marquee><img style="display: block;-webkit-user-select: none;margin: auto;background-color: hsl(0, 0%, 90%);transition: background-color 300ms;" src="http://www.imagenesanimadas.net/Ciencias/Reciclaje/Imagen-animada-Reciclaje-11.gif"></marquee>
+			</article>
+
+			<article>
+				<h2>¿Tienes algún comentario?</h2>
+               			<h3>
+				<form>
+					<label for="nom">Nombre:</label>
+					<input type="text" id=nom name="Nombre" placeholder="Escribe tu nombre"></input><br>
+					<label for="mail">Correo electrónico:</label>
+					<input type="mail" id=mail name="Correo" placeholder="Escribe tu correo"></input><br>
+					<label for="text">Comentario:</label>
+					<textarea id=msg name="Mensaje" placeholder="Escribe tu comentario aquí"></textarea><br>
+				</form>		
+              			</h3>
 			</article>
 		</section>
 		<Aside>
