--- a/Proyecto compu/Index.html
+++ b/Proyecto compu/Index.html
@@ -25,7 +25,7 @@
                 Max Castillo<br>
                 Derick Zambrano</h3>
 			
-				<marquee><img style="display: block;-webkit-user-select: none;margin: auto;background-color: hsl(0, 0%, 90%);transition: background-color 300ms;" src="http://www.imagenesanimadas.net/Ciencias/Reciclaje/Imagen-animada-Reciclaje-11.gif"></marquee>
+				<img src="https://c.tenor.com/_CXt7C1Fr6QAAAAC/world-circle.gif">
 			
 				<h2>¿Tienes algún comentario?</h2>
                			<h3>
