--- a/Proyecto compu/Index.html
+++ b/Proyecto compu/Index.html
@@ -25,7 +25,7 @@
                 Max Castillo<br>
                 Derick Zambrano</h3>
 			
-				<marquee><img src="http://www.imagenesanimadas.net/Ciencias/Reciclaje/Imagen-animada-Reciclaje-11.gif"></marquee>
+				<img src="http://www.imagenesanimadas.net/Ciencias/Reciclaje/Imagen-animada-Reciclaje-11.gif">
 			
 				<h2>¿Tienes algún comentario?</h2>
                			<h3>
