--- a/Proyecto compu/Index.html
+++ b/Proyecto compu/Index.html
@@ -25,7 +25,11 @@
                 Max Castillo<br>
                 Derick Zambrano</h3>
 			
-				<marquee><img src="https://c.tenor.com/_CXt7C1Fr6QAAAAC/world-circle.gif"></marquee>
+				<marquee>
+					<img src="https://c.tenor.com/_CXt7C1Fr6QAAAAC/world-circle.gif" width="200" height="200">
+					<img src="https://c.tenor.com/055UmBnsVKIAAAAd/green-sustainability.gif" width="200" height="200">
+					<img src="https://c.tenor.com/wL0TDpCK8NsAAAAC/recycling-reuse.gif" width="200" height="200">
+				</marquee>
 			
 				<h2>¿Tienes algún comentario?</h2>
                			<h3>
