--- a/Proyecto compu/Papel, cartón y vidrio.html
+++ b/Proyecto compu/Papel, cartón y vidrio.html
@@ -37,7 +37,6 @@
 				<img style="width: 65%;" src="https://4.bp.blogspot.com/-98jjQuqDPec/UMqyZnD6uxI/AAAAAAAAATA/RaFdyrDFXTc/s1600/papel-y-carton.png">
 			</div>
 		</div>	
-		</table>
 
 		<br>
                    
@@ -46,7 +45,17 @@
                    <p>El reciclaje de vidrio es el proceso mediante el cual se convierten desechos de vidrio en materiales que servirán para la creación de nuevos productos. 
                    Este material se puede volver a reutilizar mediante un proceso de lavado de desechos o a través de su fundición y puede ser reciclado al 100% una cantidad 
                    indefinida de veces. Para ello debemos separarlos del resto de materiales. Al contenedor verde.</p>
-
+			<br>
+			<div class="container">
+				<img src="https://cdn.pixabay.com/photo/2016/03/31/18/52/bottle-1294706_1280.png" style="width: 130px; height: 260px;" />
+			</div>
+			<div class="container">
+				<img class="middle-img" src="https://assets.stickpng.com/images/580b57fcd9996e24bc43c1f1.png"   style="width: 88px; height: 260px; position:relative; left:475%;"/>
+			</div>
+			<div class="container">
+				<img src="https://e6.pngbyte.com/pngpicture/88200/png-glass-bottle-png-Perfume-Roller-Bottle_thumbnail.png"  style="width: 100px; height: 204px; position:relative; left:900%;"/>
+		</div>	
+			
 		<h2>Tabla comparativa</h2>
 				
 		<table Border=1>
