--- a/Proyecto compu/Envases de plástico (PET) y pilas y baterías.html
+++ b/Proyecto compu/Envases de plástico (PET) y pilas y baterías.html
@@ -25,13 +25,30 @@
                 ya que es transportado por todo el planeta. Este material también contiene aditivos y absorbe metales pesados, antibióticos, pesticidas y demás toxicidad que puede afectar al 
                 medio ambiente y a los seres vivos. Los más afectados son los animales acuáticos de todas las especies, sobre todo las aves marinas que contienen plásticos en sus estómagos y 
                 algunas personas que pueden llegar a enfermarse o morir a causa de intoxicación.<br><br>
+		
                 Por esta razón, se ha llevado a cabo un proyecto para hacer conciencia y actuar ante este problema mundial, el cuál es el reciclaje. Este consiste en identificar, 
                 seleccionar y separar los elementos en su lugar correspondiente. Este proceso es simple: después de su consumo el plástico seleccionado se desecha en un bote identificado por 
                 su símbolo, esto se recicla para diferentes ventajas como la producción, la conservación de la materia prima, para menor uso de energía, para transformarla a su materia 
                 original, combustible y muchos otros usos.<br><br>
+		
+		El plástico de envases PET poseen un tipo de plástico comúnmente utilizado en envases y botellas de gaseosa, agua y aceite, entre otros. Además de ser 100% reciclable, sus
+		aplicaciones varían desde la fabricación de más envases hasta la producción de abrigos de polar. En la actualidad, el material acrílico PET se convierte en uno de los
+		termoplásticos más rígidos y resistentes del mercado, siendo la transparencia y la cristalinidad una de sus características más preciadas. Ante todo saber que el PET debe ir
+		en el contenedor amarillo. Después de la identificación llega el momento de tratar el PET para reciclarlo. Para ser reciclado, el PET debe ser entregado vacío, limpio y seco. <br>
+		El proceso de reciclaje de envases PET es el siguiente:<br>
+		•Recogida de residuos en los puntos de recolección.<br>
+		•Clasificación de los residuos entrantes en combinación con el empacado.<br>
+		•Envío a las plantas de reciclaje.<br>
+		•Separación en grandes fragmentos.<br>
+		•Retirada de etiquetas y tapones.<br>
+		•Lavado y secado.<br><br>
+		
                 Es muy importante cuidar del medio ambiente, por lo que, se necesita atender urgentemente este tema que nos corresponde a todos por nuestro futuro y el de los otros, 
                 de manera que llevemos a cabo estos proyectos con mayor interés y de forma estricta, evitando el uso de plásticos, separándolos y no desecharlos a los océanos.</p>
                 [![banner-5-2.jpg](https://i.postimg.cc/Sxv9685G/banner-5-2.jpg)](https://postimg.cc/LJjhRqmq)
+		
+		
+		
 		<h2>Las pilas y baterías</h2>
                 <p>
                 Las pilas y baterías son elementos que contienen sustancias tóxicas que a lo largo de los años se acumulan y afectan a las plantas y animales, e incluso a nosotros mismos. 
