--- a/Proyecto compu/Papel, cartón y vidrio.html
+++ b/Proyecto compu/Papel, cartón y vidrio.html
@@ -46,15 +46,17 @@
                    Este material se puede volver a reutilizar mediante un proceso de lavado de desechos o a través de su fundición y puede ser reciclado al 100% una cantidad 
                    indefinida de veces. Para ello debemos separarlos del resto de materiales. Al contenedor verde.</p>
 			<br>
-			<div class="container">
-				<img src="https://cdn.pixabay.com/photo/2016/03/31/18/52/bottle-1294706_1280.png" style="width: 130px; height: 260px;" />
+			<div id="container">
+				<div>
+					<img style="width: 20%;" src="https://cdn.pixabay.com/photo/2016/03/31/18/52/bottle-1294706_1280.png">
+				</div>
+				<div>
+					<img style="width: 15%;" src="https://assets.stickpng.com/images/580b57fcd9996e24bc43c1f1.png">
+				</div>
+				<div>
+					<img style="width: 20%;" src="https://e6.pngbyte.com/pngpicture/88200/png-glass-bottle-png-Perfume-Roller-Bottle_thumbnail.png">
+				</div>
 			</div>
-			<div class="container">
-				<img class="middle-img" src="https://assets.stickpng.com/images/580b57fcd9996e24bc43c1f1.png"   style="width: 88px; height: 260px; position:relative; left:475%;"/>
-			</div>
-			<div class="container">
-				<img src="https://e6.pngbyte.com/pngpicture/88200/png-glass-bottle-png-Perfume-Roller-Bottle_thumbnail.png"  style="width: 100px; height: 204px; position:relative; left:900%;"/>
-		</div>	
 			
 		<h2>Tabla comparativa</h2>
 				
