--- a/Proyecto compu/Envases de plástico (PET) y pilas y baterías.html
+++ b/Proyecto compu/Envases de plástico (PET) y pilas y baterías.html
@@ -34,7 +34,8 @@
 		El plástico de envases PET poseen un tipo de plástico comúnmente utilizado en envases y botellas de gaseosa, agua y aceite, entre otros. Además de ser 100% reciclable, sus
 		aplicaciones varían desde la fabricación de más envases hasta la producción de abrigos de polar. En la actualidad, el material acrílico PET se convierte en uno de los
 		termoplásticos más rígidos y resistentes del mercado, siendo la transparencia y la cristalinidad una de sus características más preciadas. Ante todo saber que el PET debe ir
-		en el contenedor amarillo. Después de la identificación llega el momento de tratar el PET para reciclarlo. Para ser reciclado, el PET debe ser entregado vacío, limpio y seco. <br>
+		en el contenedor amarillo. Después de la identificación llega el momento de tratar el PET para reciclarlo. Para ser reciclado, el PET debe ser entregado vacío, limpio y seco.<br><br>
+		
 		El proceso de reciclaje de envases PET es el siguiente:<br>
 		•Recogida de residuos en los puntos de recolección.<br>
 		•Clasificación de los residuos entrantes en combinación con el empacado.<br>
