Update Envases de plástico (PET) y pilas y baterías.html

--- a/Proyecto compu/Envases de plástico (PET) y pilas y baterías.html
+++ b/Proyecto compu/Envases de plástico (PET) y pilas y baterías.html
@@ -37,18 +37,17 @@
 		en el contenedor amarillo. Después de la identificación llega el momento de tratar el PET para reciclarlo. Para ser reciclado, el PET debe ser entregado vacío, limpio y seco.<br><br>
 		
 		El proceso de reciclaje de envases PET es el siguiente:<br>
-		•Recogida de residuos en los puntos de recolección.<br>
-		•Clasificación de los residuos entrantes en combinación con el empacado.<br>
-		•Envío a las plantas de reciclaje.<br>
-		•Separación en grandes fragmentos.<br>
-		•Retirada de etiquetas y tapones.<br>
-		•Lavado y secado.<br><br>
+		<ul>
+			<li>Recogida de residuos en los puntos de recolección.</li>
+			<li>Clasificación de los residuos entrantes en combinación con el empacado.</li>
+			<li>Envío a las plantas de reciclaje.</li>
+			<li>Separación en grandes fragmentos.</li>
+			<li>Retirada de etiquetas y tapones.</li>
+			<li>Lavado y secado.</li><br>
+		</ul>
 		
                 Es muy importante cuidar del medio ambiente, por lo que, se necesita atender urgentemente este tema que nos corresponde a todos por nuestro futuro y el de los otros, 
                 de manera que llevemos a cabo estos proyectos con mayor interés y de forma estricta, evitando el uso de plásticos, separándolos y no desecharlos a los océanos.</p>
-                [![banner-5-2.jpg](https://i.postimg.cc/Sxv9685G/banner-5-2.jpg)](https://postimg.cc/LJjhRqmq)
-		
-		
 		
 		<h2>Las pilas y baterías</h2>
                 <p>
@@ -61,7 +60,6 @@
                 En caso de tener baterías en casa, se recomienda tirarlas a un depósito de pilas y baterías que te servirá para separarlo de los residuos domésticos, después lleva el envase a 
                 los encargados de centros de acopio que reciben estos desechos para procesarlos de la forma más adecuada. Por esta razón, no se deben desechar en los botes de basura, ya que de 
                 esta manera cuidaremos nuestra salud y evitaremos una contaminación más grande en un futuro.</p>
-	    	[![Bater-as.webp](https://i.postimg.cc/BnVSYCJX/Bater-as.webp)](https://postimg.cc/sM5C17Qr)
 	    	        </article>
 		</section>
 		<Aside>
