Update Envases de plástico (PET) y pilas y baterías.html

--- a/Proyecto compu/Envases de plástico (PET) y pilas y baterías.html
+++ b/Proyecto compu/Envases de plástico (PET) y pilas y baterías.html
@@ -34,7 +34,7 @@
 		El plástico de envases PET poseen un tipo de plástico comúnmente utilizado en envases y botellas de gaseosa, agua y aceite, entre otros. Además de ser 100% reciclable, sus
 		aplicaciones varían desde la fabricación de más envases hasta la producción de abrigos de polar. En la actualidad, el material acrílico PET se convierte en uno de los
 		termoplásticos más rígidos y resistentes del mercado, siendo la transparencia y la cristalinidad una de sus características más preciadas. Ante todo saber que el PET debe ir
-		en el contenedor amarillo. Después de la identificación llega el momento de tratar el PET para reciclarlo. Para ser reciclado, el PET debe ser entregado vacío, limpio y seco.<br><br>
+		en el contenedor amarillo. Después de la identificación llega el momento de tratar el PET para reciclarlo. Para ser reciclado, el PET debe ser entregado vacío, limpio y seco.<br><br></p>
 		
 		El proceso de reciclaje de envases PET es el siguiente:<br>
 		<ul>
@@ -46,7 +46,7 @@
 			<li>Lavado y secado.</li><br>
 		</ul>
 		
-                Es muy importante cuidar del medio ambiente, por lo que, se necesita atender urgentemente este tema que nos corresponde a todos por nuestro futuro y el de los otros, 
+                <p>Es muy importante cuidar del medio ambiente, por lo que, se necesita atender urgentemente este tema que nos corresponde a todos por nuestro futuro y el de los otros, 
                 de manera que llevemos a cabo estos proyectos con mayor interés y de forma estricta, evitando el uso de plásticos, separándolos y no desecharlos a los océanos.</p>
 		
 		<h2>Las pilas y baterías</h2>
