--- a/Proyecto compu/Index.html
+++ b/Proyecto compu/Index.html
@@ -32,16 +32,20 @@
 				</marquee>
 			
 				<h2>¿Tienes algún comentario?</h2>
-               			<h3>
-				<form>
-					<label for="nom">Nombre:</label>
-					<input type="text" id=nom name="Nombre" placeholder="Escribe tu nombre"></input><br>
-					<label for="mail">Correo electrónico:</label>
-					<input type="mail" id=mail name="Correo" placeholder="Escribe tu correo"></input><br>
-					<label for="text">Comentario:</label>
-					<textarea id=msg name="Mensaje" placeholder="Escribe tu comentario aquí"></textarea><br>
-				</form>		
-              			</h3>
+               			<formm>
+					<div class="form">
+						<input type="text" id="Nom" class="form__input" autocomplete="off" placeholder=" ">
+						<label for="Nombre" class="form__label">Nombre</label>
+					</div>
+					<div class="form"> 
+						<input type="text" id="mail" class="form__input" autocomplete="off" placeholder=" ">
+						<label for="mail" class="form__label">Correo electrónico</label>
+					</div>
+					<div class="form2">
+						<textarea type="text" id="text" class="form__textarea" autocomplete="off" placeholder=" "></textarea>
+						<label for="text" class="form__label">Comentario</label>
+					</div>
+				</formm>
 			</article>
 		</section>
 		<Aside>
