--- a/Proyecto compu/Papel, cartón y vidrio.html
+++ b/Proyecto compu/Papel, cartón y vidrio.html
@@ -121,6 +121,10 @@
 
 		</section>
 		<Aside>
+			<h3>Mas informacion</h3>
+			<center><a href="https://youtube.com/c/ClimateTown">
+				<img style="width: 50%;"src="http://assets.stickpng.com/images/58568a5b4f6ae202fedf2713.png" alt="Simbolo de reciclaje">
+			</a></center>
 		</Aside>
 		<footer>
 			Realizado en: Marzo 2022 Grupo11  <br>
