--- a/Proyecto compu/Papel, cartón y vidrio.html
+++ b/Proyecto compu/Papel, cartón y vidrio.html
@@ -54,7 +54,7 @@
 					<img style="width: 15%;" src="https://assets.stickpng.com/images/580b57fcd9996e24bc43c1f1.png">
 				</div>
 				<div>
-					<img style="width: 20%;" src="https://e6.pngbyte.com/pngpicture/88200/png-glass-bottle-png-Perfume-Roller-Bottle_thumbnail.png">
+					<img style="width: 20%;" src="http://assets.stickpng.com/thumbs/580b585b2edbce24c47b2774.png">
 				</div>
 			</div>
 			
