--- a/Proyecto compu/Briks o tetra bricks y latas.html
+++ b/Proyecto compu/Briks o tetra bricks y latas.html
@@ -114,7 +114,7 @@
 	    
 		<Aside>
 			<h3>Mas informacion</h3>
-			<center><a href="https://youtube.com/c/ClimateTown">
+			<center><a href="https://youtube.com/c/ClimateTown" target="_blank">
 				<img style="width: 50%;"src="http://assets.stickpng.com/images/58568a5b4f6ae202fedf2713.png" alt="Simbolo de reciclaje">
 			</a></center>
 		</Aside>
