Update Envases de plástico (PET) y pilas y baterías.html

--- a/Proyecto compu/Envases de plástico (PET) y pilas y baterías.html
+++ b/Proyecto compu/Envases de plástico (PET) y pilas y baterías.html
@@ -64,7 +64,7 @@
 		</section>
 		<Aside>
 			<h3>Mas informacion</h3>
-			<center><a href="https://youtube.com/c/ClimateTown">
+			<center><a href="https://youtube.com/c/ClimateTown" target="_blank">
 				<img style="width: 50%;"src="http://assets.stickpng.com/images/58568a5b4f6ae202fedf2713.png" alt="Simbolo de reciclaje">
 			</a></center>
 		</Aside>
