--- a/Proyecto compu/Index.html
+++ b/Proyecto compu/Index.html
@@ -51,7 +51,7 @@
 		<Aside>
 			<h3>Mas informacion</h3>
 			<center><a href="https://youtube.com/c/ClimateTown" target="_blank">
-				<img style="width: 50%;"src="http://assets.stickpng.com/images/58568a5b4f6ae202fedf2713.png" alt="Simbolo de reciclaje">
+				<img style="width: 50%;"src="https://www.ifema.es/img/xl/reciclaje/recycling-305569_1280.png" alt="Simbolo de reciclaje">
 			</a></center>
 		</Aside>
 		<footer>
