--- a/Proyecto compu/Papel, cartón y vidrio.html
+++ b/Proyecto compu/Papel, cartón y vidrio.html
@@ -121,7 +121,7 @@
 
 		</section>
 		<Aside>
-			<h3>Mas informacion</h3>
+			<h3>Mas información</h3>
 			<center><a href="https://youtube.com/c/ClimateTown" target="_blank">
 				<img style="width: 50%;"src="http://assets.stickpng.com/images/58568a5b4f6ae202fedf2713.png" alt="Simbolo de reciclaje">
 			</a></center>
