--- a/Proyecto compu/Envases de plástico (PET) y pilas y baterías.html
+++ b/Proyecto compu/Envases de plástico (PET) y pilas y baterías.html
@@ -63,7 +63,7 @@
 	    	        </article>
 		</section>
 		<Aside>
-			<h3>Mas informacion</h3>
+			<h3>Mas información</h3>
 			<center><a href="https://youtube.com/c/ClimateTown" target="_blank">
 				<img style="width: 50%;"src="http://assets.stickpng.com/images/58568a5b4f6ae202fedf2713.png" alt="Simbolo de reciclaje">
 			</a></center>
