--- a/Proyecto compu/Papel, cartón y vidrio.html
+++ b/Proyecto compu/Papel, cartón y vidrio.html
@@ -26,7 +26,7 @@
                    naturales. El reciclaje del papel y el cartón es importante porque permite reducir la cantidad de árboles que se tienen que talar para fabricar papel. 
                    Debido a que tanto papel y cartón se fabrican de la celulosa que se obtiene de los árboles.</p>
 		<br>
-		<div id="container">
+		<div class="container">
 			<div>
 				<img style="width: 40%;" src="https://cdn.pixabay.com/photo/2020/02/09/03/28/address-book-4831847_960_720.png" alt="Cuaderno">
 			</div>
@@ -46,7 +46,7 @@
                    Este material se puede volver a reutilizar mediante un proceso de lavado de desechos o a través de su fundición y puede ser reciclado al 100% una cantidad 
                    indefinida de veces. Para ello debemos separarlos del resto de materiales. Al contenedor verde.</p>
 			<br>
-			<div id="container">
+			<div class="container">
 				<div>
 					<img style="width: 20%;" src="https://cdn.pixabay.com/photo/2016/03/31/18/52/bottle-1294706_1280.png" alt="botella de vidrio">
 				</div>
