Update Papel, cartón y vidrio.html

--- a/Proyecto compu/Papel, cartón y vidrio.html
+++ b/Proyecto compu/Papel, cartón y vidrio.html
@@ -51,7 +51,7 @@
 					<img style="width: 20%;" src="https://cdn.pixabay.com/photo/2016/03/31/18/52/bottle-1294706_1280.png" alt="botella de vidrio">
 				</div>
 				<div>
-					<img style="width: 15%;" src="https://assets.stickpng.com/images/580b57fcd9996e24bc43c1f1.png" alt="Botella de vidrio Sprite">
+					<img style="width: 45%;" src="http://assets.stickpng.com/thumbs/580b585b2edbce24c47b2773.png" alt="Botella de vidrio animada">
 				</div>
 				<div>
 					<img style="width: 20%;" src="https://e6.pngbyte.com/pngpicture/88200/png-glass-bottle-png-Perfume-Roller-Bottle_thumbnail.png" alt="botella de vidrio con dispensador">
